[add] add arabic localization

--- a/lib/l10n/intl_ar_SA.arb
+++ b/lib/l10n/intl_ar_SA.arb
@@ -1,3 +1,61 @@
 {
-
+  "appointments": "حجوزات",
+  "change": "تغيير",
+  "past": "سابق",
+  "upcoming": "مستقبل",
+  "noAppointmentsMsg": "لا يوجد حجوزات سابقة",
+  "offlineAppointments": "موعد فعلي",
+  "type": "النوع",
+  "rateAppointment": "قيّم المقابلة",
+  "at": "في",
+  "appointmentDetails": "تفاصيل الحجز",
+  "rate": "قيّم",
+  "feedBackHint": "التقييم",
+  "hospital": "المستشفي",
+  "lookingForMsg": "عن ماذا تبحث",
+  "physicalAppointment": "مقبالة فعلية",
+  "physicalAppointmentMsg": "قم بحجز مقابلة فعلة مع طبيب في التخصص المطلوب",
+  "onlineAppointment": "مقابلة اون لاين",
+  "onlineAppointmentMsg": "قم بحجز مقابلة أون لاين مع الطبيبي في التخصص المطلوب",
+  "medicalHistory": "التاريخ الطبي",
+  "medicalHistoryMsg": "يمكنك طلب تاريخك الطبي لدي المستشفي في التخصص المطلوب",
+  "emergencyCall": "مكالمة طوارئ",
+  "emergencyCallMsg": "يمكنك اجراء مكالمة طوارئ",
+  "bookAppointment": "حجز مقابلة",
+  "searchByDoctorName": "البحث باسم الطبيب",
+  "videos": "فيديوهات",
+  "yearsOfExperience": "عدد سنين الخبرة",
+  "articles": "مقالات",
+  "makeAppointment": "حجز مقابلة",
+  "patientInfo": "بيانات المريض",
+  "youHaveAppointmentFor": "لديك مقابلة ل",
+  "patientId": "رقم تعريف المريض",
+  "enterId": "ادخل الرقم التعريفي",
+  "enterMedicalCard": "ادخل البطاقة الطبية",
+  "addNewCard": "أضف بطاقة جديدة",
+  "next": "التالي",
+  "warning": "تحذير",
+  "pleaseAddPatientIdFirst": "من فضلك اضف الرقم التعريفي أولا",
+  "haveInsurance": "لديك تأمين طبي",
+  "selectImageFirst": "برجاء اختيار الصورة أولا",
+  "enterPatientId": "من فضلك اضف الرقم التعريفي",
+  "selectImage": "أختر الصورة",
+  "selectImageFromGalleryOrCamera": "أختر صورة من المعرض أو الكاميرا",
+  "camera": "الكاميرا",
+  "gallery": "المعرض",
+  "thankBooking": "شكرا علي الحجز",
+  "bookAnAppointment": "حجز مقابلة",
+  "appointmentType": "نوع المقابلة",
+  "appointmentDateTime": "تاريخ و وقت المقابلة",
+  "selectDate": "أختر التاريخ",
+  "selectTimeSlot": "أختر موعد الحجز",
+  "appointmentConfirmation": "تأكيد الحجز",
+  "confirm": "تأكيد",
+  "cancel": "الغاء",
+  "chooseSpeciality": "أختر التخصص",
+  "clearSpecialityWarning": "هل متأكد تريد الغاء تصفية التخصصات",
+  "yes": "نعم",
+  "no": "لاء",
+  "searchSpeciality": "بحث التخصص",
+  "emptySpecialityMsg": "هذا التخصص غير متاح في الوقت الحالي"
 }
