[add] add settings icons

--- a/lib/l10n/intl_ar_SA.arb
+++ b/lib/l10n/intl_ar_SA.arb
@@ -64,5 +64,6 @@
   "allSpecialities": "كل التخصصات",
   "noAvailableTimeSlot": "لا يوجد مواعيد متاحة",
   "comingSoon": "قريبا",
-  "willBeAdded": "سيتم اضافة هذه الخاصية قريبا"
+  "willBeAdded": "سيتم اضافة هذه الخاصية قريبا",
+  "settings": "اعدادات"
 }
