--- a/lib/l10n/intl_ar_SA.arb
+++ b/lib/l10n/intl_ar_SA.arb
@@ -65,5 +65,13 @@
   "noAvailableTimeSlot": "لا يوجد مواعيد متاحة",
   "comingSoon": "قريبا",
   "willBeAdded": "سيتم اضافة هذه الخاصية قريبا",
-  "settings": "اعدادات"
+  "settings": "اعدادات",
+  "aboutUS": "عنا",
+  "notification": "التنبيهات",
+  "changePassword": "تغيير كلمة السر",
+  "contactUs": "تواصل معنا",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsConditions": "الشروط والأحكام",
+  "language": "اللغة",
+  "logout": "الخروج"
 }
