[add] change language setup

--- a/lib/l10n/intl_ar_SA.arb
+++ b/lib/l10n/intl_ar_SA.arb
@@ -73,5 +73,6 @@
   "privacyPolicy": "سياسة الخصوصية",
   "termsConditions": "الشروط والأحكام",
   "language": "اللغة",
-  "logout": "الخروج"
+  "logout": "الخروج",
+  "changeLanguage": "تغيير اللغة"
 }
