[add] add logout functionality

--- a/lib/l10n/intl_ar_SA.arb
+++ b/lib/l10n/intl_ar_SA.arb
@@ -76,5 +76,7 @@
   "logout": "الخروج",
   "changeLanguage": "تغيير اللغة",
   "emailUs": "ارسال بريد اليكتروني",
-  "callUs": "اتصل بنا"
+  "callUs": "اتصل بنا",
+  "logoutMsg": "هل متأكد تريد الخروج من التطبيق؟",
+  "later": "لاحقا"
 }
